Fix header "updated ago" word wrap on phones

--- a/FSharpNews.Web.Frontend/Content/Site.css
+++ b/FSharpNews.Web.Frontend/Content/Site.css
@@ -8,6 +8,12 @@
     display: inline;
 }
 
+@media (max-width: 767px) {
+    #updated {
+        font-size: 75%;
+    }
+}
+
 /* hidden news bar */
 .hidden-news-bar {
     background-color: #f5f5f5;
@@ -19,7 +25,7 @@
 }
 
 .hidden-news-bar:hover {
-    background-color:#eee;
+    background-color: #eee;
 }
 
 /* table */
